<resources>
    <string name="app_name">2048 game</string>
    <string name="logo">2048 game</string>
    <string name="newGame">Новая игра</string>
    <string name="settings">Настройки</string>
    <string name="escape">Выход</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">back</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="restart">Restart</string>
    <string name="quick">Quick</string>
    <string name="win_text">You won game!</string>
    <string name="lose_text">You lost game!</string>
</resources>