<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.game.ui.MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="100sp"
        android:orientation="vertical">

        <Button
            android:id="@+id/newGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newGame" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/settings" />

        <Button
            android:id="@+id/escape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/escape" />
    </LinearLayout>

</RelativeLayout>