<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.GameActivity">

    <com.example.game.ui.Board
        android:id="@+id/board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/swipeDetector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/scoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30sp">

            <Button
                android:id="@+id/quick"
                android:layout_width="145sp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundButton"
                android:text="@string/quick"
                android:textColor="@color/textButton"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/restart"
                android:layout_width="145sp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundButton"
                android:text="@string/restart"
                android:textColor="@color/textButton"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="378sp"
            android:layout_height="194sp"
            android:paddingTop="10sp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/backgroundMenu"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scoreText"
                    android:layout_width="145sp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textColor="@color/textMenu"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/scoreNumber"
                    android:layout_width="145sp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/textMenu"
                    android:textSize="30sp" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/backgroundMenu"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="145sp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/textMenu"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/timeNumber"
                    android:layout_width="145sp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/textMenu"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/endGameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text"
            android:textSize="40sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>